Fix scrollbar & line-breaks on colour scheme selector.

--- a/_sass/layouts/default/styles.scss
+++ b/_sass/layouts/default/styles.scss
@@ -47,6 +47,7 @@ div#color-scheme-panel {
   position: fixed; top: 0; right: 0; z-index: $zColorSchemePanel;
   width: 9.25ex; height: 4.25ex;
   overflow: hidden; text-align: right;
+  margin: 0; padding: 0;
   border-left: 1px solid; border-bottom: 1px solid;
   border-bottom-left-radius: 0.3ex;
   -webkit-transition: .4s;
@@ -55,63 +56,10 @@ div#color-scheme-panel {
 
 
 .color-scheme-selector-open div#color-scheme-panel {
-  width: 100%; height: 15.75ex;
+  width: 100%; height: 15ex;
   border-radius: 0ex;
   -webkit-transition: .4s;
   transition: .4s;
-}
-
-button.color-scheme-button-collapse {
-  visibility: hidden;
-}
-
-.color-scheme-selector-open button.color-scheme-button-expand {
-  visibility: hidden;
-}
-
-.color-scheme-selector-open button.color-scheme-button-collapse {
-  visibility: visible;
-}
-
-.color-scheme-panel-control {
-  display: block;
-  font-size: 1.3em;
-}
-
-.color-scheme-panel-control label {
-  position: absolute;
-  top: 0.75ex;
-  right: 3.5ex;
-}
-.color-scheme-panel-control button {
-  position: absolute;
-  top: 0.5ex; right: 0.5ex;
-  width: 1.25em; height: 1.25em;
-  cursor: pointer;
-}
-
-.color-scheme-panel-selector {
-  margin: 0; padding: 0;
-  padding-top: 5ex;
-  overflow-x: auto; overflow-y: hidden; white-space: nowrap;
-  vertical-align: bottom;
-}
-
-.color-scheme-panel-selector label {
-  display: inline-block;
-  margin: 0; padding: 0.5ex;
-  margin-bottom: 0.2ex; padding-bottom: 0ex;
-  vertical-align: top; text-align: right;
-  font-size: 66%;
-  font-style: Italic;
-  width: 9ex; height: 14ex;
-  white-space: wrap;
-  border-radius: 0.5ex;
-  cursor: pointer;
-}
-
-.color-scheme-panel-selector .color-scheme-button {
-  font-size: 150%;
 }
 
 .color-scheme-button {
@@ -147,6 +95,68 @@ body div#color-scheme-toggle {
     position: fixed;
     top: 1em;
     right: 1em;
+}
+
+button.color-scheme-button-collapse {
+  visibility: hidden;
+}
+
+.color-scheme-selector-open button.color-scheme-button-expand {
+  visibility: hidden;
+}
+
+.color-scheme-selector-open button.color-scheme-button-collapse {
+  visibility: visible;
+}
+
+.color-scheme-panel-control {
+  display: block;
+  font-size: 1.3em;
+}
+
+.color-scheme-panel-control label {
+  position: absolute;
+  top: 0.75ex;
+  right: 3.5ex;
+}
+
+.color-scheme-panel-control button {
+  position: absolute;
+  top: 0.5ex; right: 0.5ex;
+  width: 1.25em; height: 1.25em;
+  cursor: pointer;
+}
+
+.color-scheme-panel-selector {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: 0; padding: 0 0.5ex;
+  margin-top: 5ex;
+  overflow-x: auto; overflow-y: hidden; white-space: nowrap;
+  vertical-align: bottom;
+}
+
+.color-scheme-panel-selector label {
+  display: inline-block;
+  margin: 0; padding: 0.5ex;
+  margin-bottom: 0.2ex; padding-bottom: 0ex;
+  vertical-align: top; text-align: center;
+  font-size: 66%;
+  font-style: Italic;
+  width: 9ex; height: auto;
+  white-space: wrap;
+  border-radius: 0.5ex;
+  cursor: pointer;
+}
+
+.color-scheme-panel-selector > label > button {
+  width: 8ex; height: 8ex;
+}
+
+.color-scheme-panel-selector > label > div {
+  margin: 0; padding: 0.5ex;
+  font-size: 90%;
+  text-align: right;
 }
 
 body>header {
